<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorClouds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/str_profile_picture"
        android:src="@drawable/profile_picture"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/img_profile_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/str_profile_icon"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/img_profile_picture"
        app:layout_constraintTop_toTopOf="@+id/img_profile_picture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/str_profile_name"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile_icon"
        app:layout_constraintStart_toEndOf="@+id/img_profile_icon"
        app:layout_constraintTop_toTopOf="@+id/img_profile_icon" />

    <ImageView
        android:id="@+id/img_profile_email"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/str_email_icon"
        android:src="@drawable/ic_email_black_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/img_profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/str_profile_email"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile_email"
        app:layout_constraintStart_toEndOf="@+id/img_profile_email"
        app:layout_constraintTop_toTopOf="@+id/img_profile_email" />

    <ImageView
        android:id="@+id/img_profile_location"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/str_location_icon"
        android:src="@drawable/ic_map_black_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/img_profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/str_profile_location"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile_location"
        app:layout_constraintStart_toEndOf="@+id/img_profile_location"
        app:layout_constraintTop_toTopOf="@+id/img_profile_location" />

</androidx.constraintlayout.widget.ConstraintLayout>