<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_movie_poster"
        android:layout_width="140dp"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/str_movie_poster"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/item_row_container" />

    <TextView
        android:id="@+id/txt_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/img_movie_poster"
        tools:text="@string/str_movie_title" />

    <TextView
        android:id="@+id/txt_movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/txt_movie_title"
        tools:text="@tools:sample/date/mmddyy" />

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/str_star"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/txt_movie_release_date" />

    <TextView
        android:id="@+id/txt_movie_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_star"
        app:layout_constraintStart_toEndOf="@+id/img_star"
        app:layout_constraintTop_toTopOf="@+id/img_star"
        tools:text="0/0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/str_tmdb"
        app:layout_constraintBottom_toBottomOf="@+id/txt_movie_score"
        app:layout_constraintStart_toEndOf="@+id/txt_movie_score"
        app:layout_constraintTop_toTopOf="@+id/txt_movie_score" />

    <TextView
        android:id="@+id/txt_movie_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/img_star"
        tools:text="1h 5m" />

    <TextView
        android:id="@+id/txt_movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_movie_poster"
        tools:text="@string/str_lorem" />

</androidx.constraintlayout.widget.ConstraintLayout>