<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:background="@drawable/item_row_container"
            android:contentDescription="@string/str_tv_shows_background" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_poster"
            android:layout_width="140dp"
            android:layout_height="170dp"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/img_tv_shows_poster"
                android:layout_width="140dp"
                android:layout_height="170dp"
                android:contentDescription="@string/str_tv_shows_poster"
                android:scaleType="fitXY"
                tools:background="@drawable/item_row_container" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_tv_shows_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/card_poster"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            tools:text="Tv Shows Title" />

        <TextView
            android:id="@+id/txt_tv_shows_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tv_shows_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/card_poster"
            tools:text="@tools:sample/date/mmddyy" />

        <ImageView
            android:id="@+id/img_star"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/txt_tv_shows_release_date"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/card_poster"
            android:background="@drawable/ic_star_black_24dp"
            android:contentDescription="@string/str_star" />

        <TextView
            android:id="@+id/txt_tv_shows_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tv_shows_release_date"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_star"
            tools:text="0/0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tv_shows_release_date"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txt_tv_shows_score"
            android:text="@string/str_tmdb" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>