<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp">

    <View
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/item_rectangle_citylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/img_movie_poster"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/item_rectangle_citylight"
        android:contentDescription="@string/str_movie_poster"
        android:elevation="3dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxEms="10"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/container"
        tools:text="@string/str_movie_title" />

    <TextView
        android:id="@+id/txt_movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/txt_movie_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_movie_title"
        tools:text="@tools:sample/date/mmddyy" />

    <TextView
        android:id="@+id/txt_movie_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/item_rectangle_silver"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/ic_star_black_24dp"
        android:drawablePadding="4dp"
        android:elevation="4dp"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="6dp"
        android:paddingBottom="4dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/img_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/img_movie_poster"
        tools:text="0/0" />

    <TextView
        android:id="@+id/txt_movie_overview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_movie_release_date"
        app:layout_constraintTop_toBottomOf="@+id/txt_movie_release_date"
        tools:text="@string/str_lorem" />

</androidx.constraintlayout.widget.ConstraintLayout>